Fixed quote positioning in blockquote on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -216,7 +216,7 @@ blockquote {
     @apply absolute;
 
     @apply text-[1.7rem];
-    @apply top-[2rem] left-[1rem];
+    @apply top-[2.4rem] left-[1rem];
 
     @screen md {
       @apply top-[3.1rem] left-breakout -ml-[3px];
